# analyst

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  vercel.json
.claude/skills/deep-dive/: SKILL.md
.claude/skills/new-research/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/plan-research/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/render/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/synthesize/: SKILL.md
_site/: index.html
_site/about/: index.html
_site/assets/: style.css
_site/reports/bethlehem-steel/: index.html
_site/reports/bethlehem-steel-complete-corporate-history-and-financial-analysis/: index.html
research/_example/: brief.md  report.md
research/bethlehem-steel/: brief.md  report.md
research/bethlehem-steel-complete-corporate-history-and-financial-analysis/: brief.md  domain-profile.md  generate_charts.py  report.md
research/bethlehem-steel-complete-corporate-history-and-financial-analysis/notes/: bankruptcy-legacy.md  competitive-landscape.md  (+7 more)
research/chinese-stock-market-sectors-major-players-and-historical-analysis/: brief.md  charts.json  domain-profile.md  generate_charts.py  report.md
scripts/: email_pdf.py  new_research.py  publish.py  render.py
scripts/utils/: md_extensions.py
templates/: academic.html  briefing.html  default.html  financial.html
templates/assets/: style.css
templates/web/: about.html  academic.html  base.html  briefing.html  default.html  financial.html  index.html
(+19 files in other folders)
